--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +15,9 @@
     "express": "^4.18.2",
     "knex": "^2.4.0",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.20",
     "passport": "^0.6.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
