--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "migrate": "npx knex migrate:latest",
+    "migrate:rollback": "npx knex migrate:rollback",
+    "seed": "npx knex seed:run"
   },
   "author": "",
   "license": "ISC",
