--- a/server/package.json
+++ b/server/package.json
@@ -12,12 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consolidate": "^0.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^2.4.0",
     "mysql": "^2.18.1",
-    "passport": "^0.6.0"
+    "nunjucks": "^3.2.3",
+    "passport": "^0.6.0",
+    "passport-spotify": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
