--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.2",
     "knex": "^2.4.0",
     "mysql": "^2.18.1",
-    "passport": "^0.6.0"
+    "passport": "^0.6.0",
+    "passport-spotify": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
