--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "helmet": "^6.0.1",
     "knex": "^2.4.0",
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.3",
