--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "consolidate": "^0.16.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
