--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
+    "chart.js": "^4.1.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.6.1"
