--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mysql": "^2.18.1",
     "nunjucks": "^3.2.3",
     "passport": "^0.6.0",
+    "passport-oauth2-refresh": "^2.1.0",
     "passport-spotify": "^2.0.0"
   },
   "devDependencies": {
