--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.11.4",
     "axios": "^1.2.2",
     "chart.js": "^4.1.2",
+    "html-react-parser": "^3.0.8",
     "rc-slider": "^10.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
